it looks off center but that's just because the image has a bit of empty space. Looks more balanced with this fix

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 }
 
 #controls {
+  margin-left: 15px;
   float: right;
   display: flex;
   flex-direction: column;
